--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ jar {
     manifest {
         attributes(
                 'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-                'Main-Class': 'io.neko.challenge.Main'
+                'Main-Class': 'com.mobiquityinc.packer.Main'
         )
     }
 }
