--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@ group 'io.neko'
 version '0.0.1-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'checkstyle'
 
 sourceCompatibility = 1.8
-targetCompatibility = sourceCompatibility
+targetCompatibility = 1.8
 compileJava.options.encoding = 'UTF-8'
 
 repositories {
@@ -22,7 +23,12 @@ jar {
     }
 }
 
+checkstyle {
+    toolVersion = checkstyleVersion
+    configFile = rootProject.file('checkstyle.xml')
+}
+
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: junitVersion
 }
 
