--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ jar {
     manifest {
         attributes(
                 'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-                'Main-Class': 'com.mobiquityinc.packer.Main'
+                'Main-Class': 'com.mobiquityinc.Main'
         )
     }
 }
